Update Mockito version and improve code readability
Various changes were made for better code readability and efficient output logging structure. Mockito library version was updated to 5.9.0 in the gradle libs.versions.toml. Adjustments were made in ImmutableMapTest.java and AntarcticaTimeZones.java to use printf instead of println for better formatting of log outputs. Additional minor changes include the removal of unnecessary blank lines and improved readability of test case scenarios. In build.gradle.kts, "--enable-preview" was added to the arguments of JVM. Last but not least, README.md was updated to reflect the use of samples till Java 21 version.